# bot

./: .gitignore  Dockerfile  Makefile  README.rst  conftest.py  local.yml  manage.py  pyproject.toml  setup.cfg  start.sh
.devcontainer/: devcontainer.json
app/: config.py  helpers.py  injector.py  listeners.py  listernes_handlers.py  logging.py  main.py  router.py  transalation.py  utils.py
app/bot_config/: __init__.py  callback_query_handlers.py  commands.py  conversation.py  conversation_states_constants.py  message.py
app/core/: BotManager.py  callback_context.py  context.py  dispatcher.py  exception.py  file.py  filters.py  handler.py  logger.py  mongo_manager.py  my_persisiter.py  translator.py
app/handlers/: __init__.py  create_course.py  create_slide.py  error_handler.py  my_conferences.py  my_courses.py  new_members.py  not_found_handler.py  sentry_check.py  slide_list.py
app/handlers2/: __init__.py  channel_detail.py  channel_public.py  conference_list.py  conference_show.py  course_list.py  course_show.py  error_handler.py  help.py  inline_query.py  left_chat_member.py  out_of_context.py  show_in_group.py  start.py
app/mixins/: back_buttons_mixin.py  forward_mixin.py  history_mixin.py  paginage_mixin.py  show_slide_mixin.py  voice_audio_mixin.py  yes_no_buttons.py
app/models/: base_entity.py  repository.py
app/request/: __init__.py  requests.py
app/telegram/: __init__.py  base_connection.py  file.py  polling.py  telegram_context.py  telegram_starter.py  web_hook.py
tests/: clear_collections.py  factories.py  test_load_di_parameters.py
(+61 files in other folders)
