[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Renier Ricardo Figueredo <aprezcuba24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.2"
injector = "^0.18.4"
pymongo = "^3.11.3"
blinker = "^1.4"
emoji = "^1.2.0"
flask = "^1.1.2"
requests = "^2.25.1"
waitress = "^2.0.0"
sentry-sdk = {extras = ["flask"], version = "^1.0.0"}

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^5.2"
mypy = "^0.800"
flake8 = "^3.8.4"
coverage = "^5.4"
black = "^20.8b1"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
